[package]
name = "cw-quadratic-funding"
version = "0.3.0"
authors = ["orkunkl <kulceorkun@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true


[dependencies]
cosmwasm-std = "1.1.0"
cosmwasm-schema = "1.1.0"
cw-storage-plus = "0.13.4"
cw0 = "0.10.0"
thiserror = "1.0.23"
integer-sqrt = "0.1.5"

[dev-dependencies]

